# experimenting

code/001-hello-world-go/: README.md  go.sum
code/001-hello-world-go/internal/: hello.go
code/002-socket-io-docker/: Dockerfile  deployment.yml  index.html  package-lock.json  package.json  service.yml
code/003-socket-io-docker/: Dockerfile  deployment.yml  index.html  index.js  package-lock.json  package.json  service.yml
code/005-prometheus/: README.md  docker-compose.yml  prometheus.yml
code/006-deconz-prometheus/: Dockerfile  README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml
code/006-deconz-prometheus/deconz_prometheus_exporter/: __init__.py
code/007-hello-world-kotlin/: build.gradle.kts  settings.gradle.kts
code/007-hello-world-kotlin/src/main/kotlin/powerexporter/: App.kt
code/008-eth_abi/: README.md  main.py  pyproject.toml
code/hello-world-go/: go.mod  go.sum
code/hello-world-go/cmd/: hello.go
code/hello-world-go/internal/: internal.go  math.go
