[tool.poetry]
name = "deconz_prometheus_exporter"
version = "0.1.0"
description = ""
authors = ["Håkon Åmdal <hakon@aamdal.com>"]
license = "MiT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]
black = "^21.11b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
