[tool.poetry]
name = "008-eth_abi"
version = "0.1.0"
description = ""
authors = ["Håkon Åmdal <hakon@aamdal.com>"]

[tool.poetry.dependencies]
python = "3.9"
eth-abi = "^3.0.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
